Restructured folder.  Deleted wwwroot.

--- a/TLD-Map-Client.csproj
+++ b/TLD-Map-Client.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\" />
+    <Content Include="map.html" />
   </ItemGroup>
 
 </Project>
